# unitycatalog-rs

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  ACCEPTANCE_FRAMEWORK_MIGRATION.md  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  biome.json  buf.gen.sharing-openapi.yaml  buf.gen.sharing.yaml  buf.gen.yaml  buf.yaml  codecov.yml  justfile  package-lock.json  package.json  proto-gen.yaml  pyproject.toml  trestle.sharing.yaml
crates/acceptance/: API_COMPATIBILITY.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  JOURNEY_CATALOG.md  README.md
crates/acceptance/docs/: REPORTING.md
crates/acceptance/examples/: simple_journey_example.rs
crates/acceptance/src/: assertions.rs  journey.rs  journey_helpers.rs  lib.rs  main.rs  mock.rs  models.rs  recorder.rs  reporting.rs  simple_journey.rs
crates/acceptance/tests/: journeys.rs  simple_framework_test.rs  simple_journey_tests.rs
crates/cli/: Cargo.toml  Dockerfile  pyproject.toml
crates/cli/src/: client.rs  config.rs  demo.rs  error.rs  main.rs  output.rs  render.rs  test.rs
crates/client/: Cargo.toml
crates/client/src/: catalogs.rs  credentials.rs  delta_v1.rs  entity_tag_assignments.rs  error.rs  external_locations.rs  functions.rs  lib.rs  providers.rs  recipients.rs  schemas.rs  shares.rs  sharing.rs  tables.rs  tag_policies.rs  temporary_credentials.rs  volumes.rs
crates/client/tests/: README.md  RECORDING.md  RECORDING_SUMMARY.md  catalog_tests.rs  example_schema_tests.rs  integration_test_helper.rs  journey_framework_summary.md  journey_integration_recorder.rs  journey_tests.rs  recording_example.rs  simple_journey_test.rs
crates/common/: BUILD_SCRIPT_SUMMARY.md  Cargo.toml  buf.gen.yaml  build.rs
crates/common/descriptors/: .gitignore  README.md
crates/common/src/: error.rs  lib.rs  python.rs  reference.rs  store.rs
crates/datafusion/: Cargo.toml
crates/datafusion/examples/: managed_table_azurite.rs  managed_table_snapshot.rs  managed_table_write.rs  metric_view.rs  unity_catalog.rs
crates/datafusion/src/: lib.rs  storage.rs
crates/datafusion/tests/: managed_table.rs  unity_resolve.rs
crates/object-store/: Cargo.toml  README.md
crates/object-store/src/: credential.rs  error.rs  lib.rs
crates/object-store/tests/: integration.rs
crates/postgres/: Cargo.toml
crates/postgres/migrations/: 03_graph.up.sql  05_secret.down.sql  05_secrets.up.sql  06_delta_commits.down.sql  06_delta_commits.up.sql  06_tasks.down.sql  06_tasks.up.sql  07_tag_policy.down.sql  07_tag_policy.up.sql  08_tag_assignment.down.sql  08_tag_assignment.up.sql
crates/postgres/src/: commit_coordinator.rs  error.rs  lib.rs  resources.rs  secrets.rs  tasks.rs
crates/postgres/tests/: commit_coordinator.rs  graph_store.rs
crates/proto-gen/: Cargo.toml
crates/proto-gen/proto/: example_service.proto
crates/proto-gen/src/: error.rs  lib.rs  output.rs  utils.rs
crates/proto-gen/tests/: analysis_integration.rs  codegen_integration.rs  openapi_enrich_integration.rs  parsing_integration.rs
crates/server/: Cargo.toml
crates/server/src/: error.rs  lib.rs  memory.rs  store.rs  telemetry.rs
crates/server/tests/: credential_vending_azurite.rs
crates/sharing-client/: Cargo.toml
crates/sharing-client/src/: client.rs  error.rs  lib.rs  models.rs  query_extractors.rs
crates/sqlite/: Cargo.toml
crates/sqlite/.sqlx/: query-04784466c28ee68a8b090791dd704067c82c7c3e6d883f6a90173e49d63be67a.json  query-153bfaee509b130bfed4cfd9feaba4b11671369bf376e2df462e252d6472d018.json  query-1695ad700abc2a76f36ebd8392c03612d68ac2d875c5501b8df2be519e869a11.json  query-27b6d9b52c2c0ef2efe2f39e8c489f3657f7a4cfb04cc3a2697de453a1a8db3a.json  query-56f47fdea93eee0a86118989adc2f7bce4247217f5b88de59b6efbb64093a019.json  query-57ab532f37643b20dc86e805702c35c27e2ac9cabae9320177505d3f1a043f37.json  query-6300c37a7154fc8cd4ba32e6584232df0b797159be518d25beb7803726d62a70.json  query-731b5508dfe5b313930d1c9acf39e350a88ac5ed1d578a76252854d41c32621a.json  query-9a569ff73abef42251d1230fe6e75be4995f3cd2affd16ec19a7487dac4a3a56.json  query-a235e63cf25b86fb5ba74ce1bbdb662df22d0fb832e4d054a5171b29edaf86f3.json  query-a7eac3702969b9a2bc898bd3d715a5992b0c9a64f0fc1f8480b056acf274a638.json  query-ac74f6d0735308334c40040b5d4d4b4105ad045e03223d5a8f8697a662a5fe51.json  query-b9823b9e249713597786bf4e693383ffcfd907b87746e325ba4d30610e9a1cd8.json  query-cd9902ea871cad1aa870f452cc78e6e7b3a9e4eabaf48f8f7bbddc7f61509161.json  query-cf6d4fbafaaed8b97f0c2c3c735a47604982c5fa8ba4bfd41ba2bbac28181e51.json  query-dde88d09ae50d0a2e0b8567a8bd394435abc8b2e838e530a2a879b2c15b38915.json  query-e1f08ac6a0cb38dd47579fde79cb2f4fdceb7c34585abf06ddb2ecf63c6780f8.json  query-e6594b932ed373db09feebf839ae35a6dda95be1d736cb662ac0de32d4ff1a24.json  query-e7d007f261a0671798f3c1760a5bb1f1f40a9cdc60025bcf73ed6877b7a16a3d.json  query-f8b5b4d75cd1bc21d9e4ce7b0cf91b3746cb1b82c696885bc436b73b591f714d.json
crates/sqlite/migrations/: 0001_init.sql  0002_delta_commits.sql
crates/sqlite/src/: commit_coordinator.rs  error.rs  lib.rs  secrets.rs  store.rs
crates/sqlite/tests/: commit_coordinator.rs  store.rs
crates/tasks/: Cargo.toml  README.md
crates/tasks/src/: error.rs  lib.rs  registry.rs  runner.rs  specialized.rs  store.rs  types.rs
crates/trestle-store/: Cargo.toml
crates/trestle-store/src/: name.rs  reference.rs  secrets.rs  store.rs
examples/rust/: Cargo.toml
examples/rust/src/: catalogs.rs  lib.rs  object_store.rs  schemas.rs  tables.rs  tag_policies.rs  volumes.rs
node/client/: .gitignore  Cargo.toml  biome.json  buf.gen.yaml  jest.config.js  jest.integration.config.js  package-lock.json  package.json  rustfmt.toml  tsconfig.json
node/client/__mocks__/: handlers.ts
node/client/__test__/: index.test.ts
node/client/src/: client.rs  error.rs  lib.rs
node/client/unitycatalog/: client.ts  index.ts  native.d.ts  native.js
python/client/: Cargo.toml  _client_supplement.pyi  pyproject.toml  unitycatalog_client.pyi
python/client/src/: client.rs  (+3 more)
unitycatalog/common/: Cargo.toml  README.md  buf.gen.yaml  justfile
unitycatalog/postgres/: Cargo.toml
(+1034 files in other folders)
