[workspace]
resolver = "2"
members = ["crates/*", "python/client", "node/client"]
# members = ["crates/*"]
# exclude = ["python/client"]

[workspace.package]
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/unitycatalog-incubator/unitycatalog-rs"
readme = "README.md"
rust-version = "1.85"
version = "0.0.1"
homepage = "https://unitycatalog.io"
keywords = [
  "unitycatalog",
  "deltalake",
  "lakehouse",
  "delta-sharing",
  "governance",
]

[workspace.dependencies]
delta_kernel = { version = "0.15.1", features = [
  "internal-api",
  "default-engine-rustls",
  "arrow-55",
] }
deltalake-datafusion = { git = "https://github.com/delta-incubator/deltalake-datafusion", rev = "645f0156f3a7792a1b2d350020eab68d58e49726" }
# deltalake-datafusion = { path = "../deltalake-datafusion/crates/datafusion" }

async-trait = "0.1.83"
axum = { version = "0.8" }
bytes = { version = "1.1" }
chrono = { version = "0.4.41", features = ["serde"] }
env_logger = "0.11"
futures = "0.3"
itertools = { version = "0.14.0" }
napi = { version = "2.16.8", default-features = false, features = [
  "napi9",
  "async",
] }
napi-derive = "2.16.8"
object_store = { version = "0.12", features = ["azure", "aws", "gcp"] }
pbjson = { version = "0.7" }
pbjson-types = "0.7"
prost = { version = "0.13.3" }
prost-types = { version = "0.13.3" }
pyo3 = { version = "0.24", features = ["macros", "indexmap"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
strum = { version = "0.27", features = ["derive"] }
sqlx = { version = "0.8.3" }
thiserror = { version = "2" }
tonic = { version = "0.12.3" }
tower = { version = "0.5", features = ["limit", "filter", "util"] }
tracing = { version = "0.1", features = ["log"] }
url = { version = "2.5.2", features = [
  "serde",
  "std",
], default-features = false }
uuid = { version = "1", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = [
  "rustls-tls-native-roots",
  "http2",
  "json",
  "stream",
] }

[workspace.metadata.typos]
default.extend-ignore-re = [
  # Custom ignore regex patterns: https://github.com/crate-ci/typos/blob/master/docs/reference.md#example-configurations
  "(?s)//\\s*spellchecker:ignore-next-line[^\\n]*\\n[^\\n]*",
  # Line block with # spellchecker:<on|off>
  "(?s)(#|//|<\\!--)\\s*spellchecker:off.*?\\n\\s*(#|//|<\\!--)\\s*spellchecker:on",
  "(?Rm)^.*(#|//)\\s*spellchecker:disable-line$",
]
files.extend-exclude = [
  "crates/common/src/models/gen/**/*",
  "app/src/gen/**/*",
  "openapi/**/*",
  "node/client/unitycatalog/models/gen/**/*",
  "crates/build/src/gen/**/*",
]

[workspace.metadata.typos.default.extend-words]
# to avoid having to name fields r#type
typ = "typ"
