[workspace]
resolver = "2"
members = ["crates/*", "python/client", "node/client", "examples/rust"]
# members = ["crates/*"]
# exclude = ["python/client"]

[workspace.package]
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/unitycatalog-incubator/unitycatalog-rs"
readme = "README.md"
rust-version = "1.85"
version = "0.0.1"
homepage = "https://unitycatalog.io"
keywords = [
  "unitycatalog",
  "deltalake",
  "lakehouse",
  "delta-sharing",
  "governance",
]

[workspace.dependencies]
# Kernel and delta-rs core share one git source so the `Snapshot` types unify when
# `crates/datafusion` builds a catalog-managed kernel snapshot and hands it to
# `deltalake-core::kernel::Snapshot::new`. Both are pinned here at the workspace level.
delta_kernel = { package = "buoyant_kernel", git = "https://github.com/buoyant-data/delta-kernel-rs", branch = "buoyant/main", features = [
  "internal-api",
  "default-engine-rustls",
  "arrow-58",
] }
deltalake-core = { git = "https://github.com/roeap/delta-rs", rev = "6825c1823d8a04290cfe19b8cf6b518cd0e6db34", features = [
  "datafusion",
  "cloud",
] }

aes-gcm = { version = "0.10" }
async-trait = "0.1.83"
axum = { version = "0.8" }
axum-extra = { version = "0.10", features = ["query"] }
bytes = { version = "1.1" }
chrono = { version = "0.4.41", features = ["serde"] }
dashmap = { version = "6" }
datafusion = { version = "53.1.0" }
env_logger = "0.11"
futures = "0.3.32"
itertools = { version = "0.14.0" }
napi = { version = "3.5", default-features = false, features = [
  "napi9",
  "async",
  "web_stream",
] }
napi-derive = "3.5"
object_store = { version = "0.13.2", features = ["azure", "aws", "gcp"] }
olai-http = { version = "0.0.1" }
olai-store = { version = "0.0.1" }
pbjson = { version = "0.9" }
pbjson-types = "0.9"
prost = { version = "0.14.1" }
prost-types = { version = "0.14.1" }
pyo3 = { version = "0.24", features = ["macros", "indexmap"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
strum = { version = "0.27", features = ["derive"] }
sqlx = { version = "0.8.3" }
thiserror = { version = "2" }
tokio = { version = "1.40" }
tonic = { version = "0.14" }
tonic-prost = { version = "0.14" }
tower = { version = "0.5", features = ["limit", "filter", "util"] }
tracing = { version = "0.1", features = ["log"] }
url = { version = "2.5.2", features = [
  "serde",
  "std",
], default-features = false }
uuid = { version = "1", features = ["serde"] }
zeroize = { version = "1.8", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = [
  "rustls-tls-native-roots",
  "http2",
  "json",
  "stream",
] }

[workspace.metadata.typos]
default.extend-ignore-re = [
  # Custom ignore regex patterns: https://github.com/crate-ci/typos/blob/master/docs/reference.md#example-configurations
  "(?s)//\\s*spellchecker:ignore-next-line[^\\n]*\\n[^\\n]*",
  # Line block with # spellchecker:<on|off>
  "(?s)(#|//|<\\!--)\\s*spellchecker:off.*?\\n\\s*(#|//|<\\!--)\\s*spellchecker:on",
  "(?Rm)^.*(#|//)\\s*spellchecker:disable-line$",
]
files.extend-exclude = [
  "crates/common/src/models/gen/**/*",
  "openapi/**/*",
  "node/client/unitycatalog/models/gen/**/*",
  "../trestle/crates/trestle-codegen/src/gen/**/*",
]

[workspace.metadata.typos.default.extend-words]
# to avoid having to name fields r#type
typ = "typ"
AKS = "AKS"
