[workspace]
resolver = "2"
members = ["crates/*", "python/client", "node/client", "examples/rust"]
# members = ["crates/*"]
# exclude = ["python/client"]

[workspace.package]
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/unitycatalog-incubator/unitycatalog-rs"
readme = "README.md"
# Floor set by the dependency tree: buoyant_kernel requires rustc 1.91
# (datafusion 53 / darling 0.23 need 1.88). Keep CI's toolchain pin >= this.
rust-version = "1.91"
version = "0.0.1"
homepage = "https://unitycatalog.io"
keywords = [
  "unitycatalog",
  "deltalake",
  "lakehouse",
  "delta-sharing",
  "governance",
]

[workspace.dependencies]
# Kernel and delta-rs core share one git source so the `Snapshot` types unify when
# `crates/datafusion` builds a catalog-managed kernel snapshot and hands it to
# `deltalake-core::kernel::Snapshot::new`. Both are pinned here at the workspace level.
delta_kernel = { package = "buoyant_kernel", git = "https://github.com/buoyant-data/delta-kernel-rs", branch = "buoyant/main", features = [
  "internal-api",
  "default-engine-rustls",
  "arrow-58",
] }
deltalake-core = { git = "https://github.com/roeap/delta-rs", rev = "10d23f5ca992e497a331e78a03eb82d1bdbd149d", features = [
  "datafusion",
  "cloud",
] }

aes-gcm = { version = "0.10" }
async-trait = "0.1.83"
axum = { version = "0.8" }
axum-extra = { version = "0.10", features = ["query"] }
bytes = { version = "1.1" }
chrono = { version = "0.4.41", features = ["serde"] }
dashmap = { version = "6" }
datafusion = { version = "53.1.0" }
env_logger = "0.11"
futures = "0.3.32"
itertools = { version = "0.14.0" }
napi = { version = "3.5", default-features = false, features = [
  "napi9",
  "async",
  "web_stream",
] }
napi-derive = "3.5"
object_store = { version = "0.13.2", features = ["azure", "aws", "gcp"] }
# Git ref pinned to trestle main, which carries the Azurite SAS fix + the
# ObjectStore::create(id) change (external resource-id adoption). Bump the rev
# as trestle main advances; published crate isn't usable yet (proxy offset).
olai-http = { git = "https://github.com/open-lakehouse/trestle", rev = "173ef0013a3ef8f9f525fcbbfd7e5c1243fe027d" }
olai-store = { git = "https://github.com/open-lakehouse/trestle", rev = "173ef0013a3ef8f9f525fcbbfd7e5c1243fe027d" }
pbjson = { version = "0.9" }
pbjson-types = "0.9"
prost = { version = "0.14.1" }
prost-types = { version = "0.14.1" }
pyo3 = { version = "0.24", features = ["macros", "indexmap"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
serde_yml = { version = "0.0.12" }
strum = { version = "0.27", features = ["derive"] }
sqlx = { version = "0.8.3" }
thiserror = { version = "2" }
tokio = { version = "1.40" }
tonic = { version = "0.14" }
tonic-prost = { version = "0.14" }
tower = { version = "0.5", features = ["limit", "filter", "util"] }
tracing = { version = "0.1", features = ["log"] }
url = { version = "2.5.2", features = [
  "serde",
  "std",
], default-features = false }
uuid = { version = "1", features = ["serde"] }
zeroize = { version = "1.8", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = [
  "rustls-tls-native-roots",
  "http2",
  "json",
  "stream",
] }

[workspace.metadata.typos]
default.extend-ignore-re = [
  # Custom ignore regex patterns: https://github.com/crate-ci/typos/blob/master/docs/reference.md#example-configurations
  "(?s)//\\s*spellchecker:ignore-next-line[^\\n]*\\n[^\\n]*",
  # Line block with # spellchecker:<on|off>
  "(?s)(#|//|<\\!--)\\s*spellchecker:off.*?\\n\\s*(#|//|<\\!--)\\s*spellchecker:on",
  "(?Rm)^.*(#|//)\\s*spellchecker:disable-line$",
]
files.extend-exclude = [
  "crates/common/src/models/gen/**/*",
  "openapi/**/*",
  "node/client/unitycatalog/models/gen/**/*",
  "../trestle/crates/trestle-codegen/src/gen/**/*",
]

[workspace.metadata.typos.default.extend-words]
# to avoid having to name fields r#type
typ = "typ"
AKS = "AKS"
