[project]
name = "unitycatalog-py"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "datamodel-code-generator>=0.28.5",
  "marimo[recommended]>=0.14.17",
  "maturin>=1.8.3",
  "pydantic>=2.11.1, <3",
  # "unitycatalog-client",
  "requests>=2.32.3",
]

# [tool.uv.sources]
# unitycatalog-client = { workspace = true }

[tool.uv.workspace]
members = ["python/*"]

[tool.pyright]
venvPath = "."
venv = ".venv"
