[package]
name = "unitycatalog-acceptance"
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
rust-version.workspace = true
version.workspace = true
homepage.workspace = true
keywords.workspace = true
description = "Acceptance testing framework for Unity Catalog"

[dependencies]
# repository dependencies
unitycatalog-client = { path = "../client" }
unitycatalog-common = { path = "../common" }

# workspace dependencies
chrono = { workspace = true, features = ["serde"] }
olai-http = { workspace = true }
itertools = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

# crates.io dependencies
dotenv = "0.15.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
futures = { workspace = true }
async-trait = "0.1"
console = "0.15"
comfy-table = "7.1"

# Testing and mocking
mockito = "1.4"

[dev-dependencies]
env_logger = "0.10"
log = "0.4"
rstest = "0.18"
tempfile = "3.1"

[features]
default = []
integration = []
