[package]
name = "unitycatalog-cli"
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
version.workspace = true
rust-version.workspace = true

[[bin]]
name = "uc"
path = "src/main.rs"

[dependencies]
# path dependencies (in alphabetical order)
unitycatalog-client = { path = "../client" }
unitycatalog-common = { path = "../common", features = ["axum", "store"] }
unitycatalog-postgres = { path = "../postgres" }
unitycatalog-sqlite = { path = "../sqlite" }
unitycatalog-server = { path = "../server", features = ["axum", "proxy"] }

# workspace dependencies (in alphabetical order)
async-trait = { workspace = true }
axum = { workspace = true, features = ["tracing"] }
chrono = { workspace = true }
olai-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

# crates.io dependencies (in alphabetical order)
base64 = "0.22"
clap = { version = "4.5", features = ["derive", "env"] }
comfy-table = "7.1"
console = "0.15"
crossterm = { version = "0.28", features = ["event-stream"] }
futures = "0.3"
ratatui = "0.29"
serde_yml = { workspace = true }
swagger-ui-dist = { version = "5.18.3" }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing-subscriber = { version = "0.3", features = [
  "tracing-log",
  "fmt",
  "env-filter",
] }
tui-tree-widget = "0.23"
