[package]
name = "unitycatalog-common"
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
version.workspace = true
rust-version.workspace = true

[dependencies]
cloud-client = { path = "../cloud-client" }
unitycatalog-derive = { path = "../derive" }

async-trait = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
delta_kernel = { workspace = true }
itertools = { workspace = true }
pbjson = { workspace = true }
pbjson-types = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
tonic = { workspace = true, optional = true }
tracing = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }

datafusion = { version = "49" }

futures-util = { version = "0.3.28" }
reqwest = { version = "0.12", default-features = false, features = [
  "rustls-tls-native-roots",
  "http2",
  "json",
  "stream",
] }

# in-memory handler dependencies (in alphabetical order)
dashmap = { version = "6" }

# rest server dependencies (in alphabetical order)
axum = { workspace = true, optional = true }

# rest client dependencies (in alphabetical order)
futures = { version = "0.3", optional = true }

# integration test dependencies (in alphabetical order)
http = { version = "1.2", optional = true }
http-body-util = { version = "0.1.0", optional = true }
mime = { version = "0.3", optional = true }

# support kernel executors based on tokio runtime.
tokio = { version = "1.40", optional = true, features = ["rt-multi-thread"] }

# convenience for downstream crates that want to use certain types with sqlx
sqlx = { workspace = true, optional = true, features = [
  "uuid",
  "macros",
  "chrono",
  "json",
] }

# convenience for downstream crates that want to use certain types with tokio-postgres
postgres-types = { version = "0.2", optional = true, features = ["derive"] }

# derive pyclass for generated messages
pyo3 = { workspace = true, optional = true }

[dev-dependencies]
http-body-util = "0.1.0"
mime = "0.3"
tokio = { version = "1", features = ["full"] }

[features]
default = ["grpc", "memory", "rest-client", "tokio"]
grpc = ["tonic"]
axum = ["dep:axum", "http"]
sqlx = ["dep:sqlx"]
memory = ["uuid/v7"]
tokio = ["dep:tokio", "delta_kernel/tokio"]

rest-client = ["futures"]

tokio-pg = ["postgres-types"]

# exposes functionality that help testing cutom handler / router implementations.
integration = ["http-body-util", "mime", "axum"]

# derives pyclass for generated messages
python = ["pyo3"]
