[package]
name = "unitycatalog-common"
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
version.workspace = true
rust-version.workspace = true

[dependencies]
cloud-client = { path = "../cloud-client" }
unitycatalog-derive = { path = "../derive" }

async-trait = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
delta_kernel = { workspace = true, optional = true }
itertools = { workspace = true }
pbjson = { workspace = true }
pbjson-types = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
tonic = { workspace = true, optional = true }
tracing = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }

futures-util = { version = "0.3.28" }
reqwest = { version = "0.12", default-features = false, features = [
  "rustls-tls-native-roots",
  "http2",
  "json",
  "stream",
] }

# rest server dependencies (in alphabetical order)
axum = { workspace = true, optional = true }

# rest client dependencies (in alphabetical order)
futures = { version = "0.3", optional = true }

# integration test dependencies (in alphabetical order)
http = { version = "1.2", optional = true }
http-body-util = { version = "0.1.0", optional = true }
mime = { version = "0.3", optional = true }

# convenience for downstream crates that want to use certain types with sqlx
sqlx = { workspace = true, optional = true, features = [
  "uuid",
  "macros",
  "chrono",
  "json",
] }

# derive pyclass for generated messages
pyo3 = { workspace = true, optional = true }

[dev-dependencies]
http-body-util = "0.1.0"
mime = "0.3"
tokio = { version = "1", features = ["full"] }

[features]
default = ["grpc", "rest-client"]
grpc = ["tonic"]

# enable support for the axum framework. This will implement `FromRequest`
# and `FromRequestParts` for request types.
axum = ["dep:axum", "http"]

sqlx = ["dep:sqlx"]

rest-client = ["futures"]

# exposes functionality that help testing cutom handler / router implementations.
integration = ["http-body-util", "mime", "axum"]

# derives pyclass for generated messages
python = ["pyo3"]

sharing = ["delta_kernel"]
