[package]
name = "unitycatalog-common"
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
version.workspace = true
rust-version.workspace = true

[dependencies]
async-trait = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
itertools = { workspace = true }
olai-http = { workspace = true, optional = true }
pbjson = { workspace = true }
percent-encoding = "2"
pbjson-types = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }

# rest server dependencies (in alphabetical order)
axum = { workspace = true, optional = true }
axum-extra = { workspace = true, optional = true }
futures = { version = "0.3", optional = true }
olai-store = { workspace = true }

# grpc server specific dependencies (in alphabetical order)
tonic = { workspace = true, optional = true }

# convenience for downstream crates that want to use certain types with sqlx
sqlx = { workspace = true, optional = true, features = [
  "uuid",
  "macros",
  "chrono",
  "json",
] }

# derive pyclass for generated messages
pyo3 = { workspace = true, optional = true }

# derive #[napi] for generated enums (used by node/client)
napi-derive = { workspace = true, optional = true }

# integration test dependencies (in alphabetical order)
http = { version = "1.2", optional = true }
http-body-util = { version = "0.1.0", optional = true }
mime = { version = "0.3", optional = true }

[dev-dependencies]
http-body-util = "0.1.0"
mime = "0.3"
tokio = { version = "1", features = ["full"] }

[features]
default = ["rest-client"]
grpc = ["tonic"]

# enable support for the axum framework. This will implement `FromRequest`
# and `FromRequestParts` for request types.
axum = ["dep:axum", "dep:axum-extra", "http"]

sqlx = ["dep:sqlx", "olai-store/sqlx"]

# storage abstraction traits (ResourceStore, SecretManager) implemented by backends
store = ["dep:futures"]

# enable client implementation to interact with Unity REST APIs
rest-client = ["dep:futures", "olai-http"]

# exposes functionality that help testing cutom handler / router implementations.
integration = ["http-body-util", "mime", "axum"]

# derives pyclass for generated messages
python = ["pyo3"]

# derives #[napi] for generated enums (used by node/client)
node = ["napi-derive"]
