[package]
name = "datafusion-unitycatalog"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
async-trait = { workspace = true }
bytes = { workspace = true }
dashmap = { workspace = true }
datafusion = { workspace = true }
futures = { workspace = true }
object_store = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
tracing = { workspace = true }
url = { workspace = true }

unitycatalog-common = { path = "../common" }
unitycatalog-object-store = { path = "../object-store" }

deltalake-core = { version = "0.32.3", features = [
  "datafusion",
  "cloud",
], optional = true }

[features]
default = ["delta"]
# Expose a Delta-backed `TableProviderBuilder` (pulls in delta-rs).
delta = ["dep:deltalake-core"]

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[[example]]
name = "unity_catalog"
required-features = ["delta"]
