[package]
name = "datafusion-unitycatalog"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
async-trait = { workspace = true }
bytes = { workspace = true }
dashmap = { workspace = true }
datafusion = { workspace = true }
futures = { workspace = true }
object_store = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
tracing = { workspace = true }
url = { workspace = true }

unitycatalog-common = { path = "../common" }
unitycatalog-object-store = { path = "../object-store" }
unitycatalog-client = { path = "../client" }

deltalake-core = { workspace = true, optional = true }
# Build catalog-managed kernel snapshots (log tail + max catalog version) to hand
# to deltalake-core's `Snapshot::new`. Shares the workspace `delta_kernel` git
# source with `deltalake-core` so the `Snapshot` types unify.
delta_kernel = { workspace = true, optional = true }

[features]
default = ["delta"]
# Expose a Delta-backed `TableProviderBuilder` (pulls in delta-rs).
delta = ["dep:deltalake-core", "dep:delta_kernel"]

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[[example]]
name = "unity_catalog"
required-features = ["delta"]
