[package]
name = "datafusion-unitycatalog"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
async-trait = { workspace = true }
bytes = { workspace = true }
dashmap = { workspace = true }
datafusion = { workspace = true }
futures = { workspace = true }
object_store = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
tracing = { workspace = true }
url = { workspace = true }

unitycatalog-common = { path = "../common" }
unitycatalog-object-store = { path = "../object-store" }
unitycatalog-client = { path = "../client" }

deltalake-core = { workspace = true, optional = true }
# Build catalog-managed kernel snapshots (log tail + max catalog version) to hand
# to deltalake-core's `Snapshot::new`. Shares the workspace `delta_kernel` git
# source with `deltalake-core` so the `Snapshot` types unify.
delta_kernel = { workspace = true, optional = true }

# Serialize UC DDL responses into result batches (the `sql` module, `delta`
# feature) and deserialize metric-view YAML (`metric-view` feature).
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
serde_yml = { workspace = true, optional = true }

[features]
default = ["delta", "metric-view"]
# Expose a Delta-backed `TableProviderBuilder` (pulls in delta-rs) and the Unity
# Catalog DDL statements + planner (the `sql` module), whose managed
# `CREATE TABLE` path serializes responses with serde/serde_json.
delta = ["dep:deltalake-core", "dep:delta_kernel", "dep:serde", "dep:serde_json"]
# Lower Unity Catalog metric-view YAML into a DataFusion `LogicalPlan`.
metric-view = ["dep:serde", "dep:serde_yml"]

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
serde_json = { workspace = true }
olai-http = { workspace = true }

[[example]]
name = "unity_catalog"
required-features = ["delta"]

[[example]]
name = "managed_table_snapshot"
required-features = ["delta"]

[[example]]
name = "managed_table_write"
required-features = ["delta"]

[[example]]
name = "metric_view"
required-features = ["metric-view"]
