[package]
name = "unitycatalog-postgres"
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
version.workspace = true
rust-version.workspace = true

[dependencies]
# path dependencies (in alphabetical order)
unitycatalog-common = { path = "../common", default-features = false }
unitycatalog-server = { path = "../server", default-features = false }
unitycatalog-derive = { path = "../derive" }

# workspace dependencies (in alphabetical order)
async-trait = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
itertools = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true, features = ["raw_value", "preserve_order"] }
thiserror = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

# crates.io dependencies (in alphabetical order)
base64 = "0.22"
paste = "1.0"
sqlx = { workspace = true, features = [
  "postgres",
  "chrono",
  "uuid",
  "json",
  "runtime-tokio-rustls",
  "migrate",
  "macros",
] }
uuid = { version = "1.8", features = ["serde"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "parking_lot"] }
unitycatalog-common = { path = "../common", default-features = false, features = [
  "sqlx",
  "axum",
] }

[features]
default = ["sqlx"]
# feature flags for integration tests
# running integration tests requires a running PostgreSQL instance
# and DATABASE_URL environment variable set
integration-pg = ["unitycatalog-common/integration"]
sqlx = ["unitycatalog-common/sqlx"]
