[package]
name = "proto-gen"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
prost = { workspace = true }
prost-types = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
itertools = { workspace = true }
protobuf = "3.0"
convert_case = "0.7"
syn = { version = "2.0", features = ["full", "parsing", "printing", "clone-impls"] }
quote = "1.0"
proc-macro2 = "1.0"
prettyplease = "0.2"
regex = "1.10"

[dev-dependencies]
rstest = "0.23"
