[package]
name = "proto-gen"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[[bin]]
name = "proto-gen"
path = "src/bin/proto-gen.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
prost = { workspace = true }
prost-types = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
itertools = { workspace = true }
protobuf = "3.0"
convert_case = "0.7"
syn = { version = "2.0", features = ["full", "parsing", "printing", "clone-impls"] }
quote = "1.0"
proc-macro2 = "1.0"
prettyplease = "0.2"
regex = "1.10"
textwrap = "0.16"
serde_json = "1"
serde_yaml = "0.9"
glob = "0.3"

[dev-dependencies]
rstest = "0.23"
tempfile = "3"
